Fix font weight on Safari

--- a/css/style.less
+++ b/css/style.less
@@ -23,7 +23,7 @@ html, body {
   color: @body-color;
   background: @body-background;
   font-variant-ligatures: common-ligatures;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 .editor {
